--- a/404.html
+++ b/404.html
@@ -68,11 +68,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Gqwt2S7h.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Dzp8YJoT.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DEtGNJhq.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BOlDBRf-.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DgkU9qJm.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.CtCNMdbi.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CdPFcHx2.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CcsB9NqO.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bc9YyEIu.js">
 </head>
 
@@ -80,15 +80,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1q9je57 = {
+					__sveltekit_1cs1fay = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Gqwt2S7h.js"),
-						import("/_app/immutable/entry/app.CdPFcHx2.js")
+						import("/_app/immutable/entry/start.DEtGNJhq.js"),
+						import("/_app/immutable/entry/app.CcsB9NqO.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
