--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
 		<link href="./_app/immutable/assets/0.DFYyI469.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DBQ5zjMS.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Gqwt2S7h.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Dzp8YJoT.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DEtGNJhq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BOlDBRf-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.DgkU9qJm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CtCNMdbi.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CdPFcHx2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CcsB9NqO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Bc9YyEIu.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BejZ6GrW.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Co94wmBF.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/language.CsPXyL5P.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Toaster.svelte_svelte_type_style_lang.9mCbXPn3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DwKZRwaH.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BBc8RMK1.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CZlzFf6A.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Bg5xOkGx.js">
 </head>
@@ -96,7 +96,7 @@
 			
 			<script>
 				{
-					__sveltekit_1q9je57 = {
+					__sveltekit_1cs1fay = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -105,8 +105,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Gqwt2S7h.js"),
-						import("./_app/immutable/entry/app.CdPFcHx2.js")
+						import("./_app/immutable/entry/start.DEtGNJhq.js"),
+						import("./_app/immutable/entry/app.CcsB9NqO.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
