--- a/404.html
+++ b/404.html
@@ -68,11 +68,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Ct9J_D_A.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CD-Pn-ym.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CqH75DPQ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BL1pKVY8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DqhVNXVp.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BQSQLJa_.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.y6rlIAd1.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.tBiJXWqh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version._QHcf-xh.js">
 </head>
 
@@ -80,15 +80,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_15e4sl7 = {
+					__sveltekit_1bb48ly = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Ct9J_D_A.js"),
-						import("/_app/immutable/entry/app.y6rlIAd1.js")
+						import("/_app/immutable/entry/start.CqH75DPQ.js"),
+						import("/_app/immutable/entry/app.tBiJXWqh.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
